--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class="container mx-auto col-4 ">
+  <h1 class="text-center">Welcome to <strong><i class="fas fa-book-open"></i> Bookers</strong></h1>
+</div>
