--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,2 +1,20 @@
-<h1>Homes#home</h1>
-<p>Find me in app/views/homes/home.html.erb</p>
+<div class="container mx-auto col-4 ">
+
+<h1>Welcome to <strong><i class="fas fa-book-open"></i> Bookers!!!!</strong></h1>
+
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
+<p>about various books!</p>
+
+
+<div class="row">
+  <div class="col">
+    <a class="btn btn-outline-primary mx-auto btn-lg col mb-2" href="/users/sign_in" role="button">Log in</a>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <a class="btn btn-outline-success mx-auto btn-lg col" href="/users/sign_up" role="button">Sign up</a>
+  </div>
+</div>
+
+
