--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,82 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm bg-success ">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/" style="font-size: 24px;" ><strong>Bookers</strong></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+           <% if user_signed_in? %>
+            <li class="nav-item">
+             <%= link_to user_path(current_user.id), class: 'nav-link text-white' do %>
+              <i class="fas fa-home"></i>Home
+             <% end %>
+            </li >
+            <li class="nav-item">
+             <%= link_to "/users", class: 'nav-link text-white'  do %>
+              <i class="fas fa-users"></i>Users
+             <% end %>
+            </li>
+            <li class="nav-item">
+             <%= link_to "/books", class: 'nav-link text-white'  do %>
+              <i class="fas fa-book"></i>Books
+             <% end %>
+            </li>
+            <li class="nav-item">
+             <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-white'  do %>
+              <i class="fas fa-sign-out-alt"></i>Log out
+             <% end %>
+            </li>
+           <% else %>
+            <li class="nav-item">
+             <%= link_to "/", class: 'nav-link text-white'  do %>
+              <i class="fas fa-home"></i>Home
+             <% end %>
+            </li>
+            <li class="nav-item">
+             <%= link_to "/homes/about", class: 'nav-link text-white'  do %>
+              <i class="fas fa-wrench"></i>About
+             <% end %>
+            </li>
+            <li class="nav-item">
+             <%= link_to new_user_registration_path, class: 'nav-link text-white'  do %>
+              <i class="fas fa-user-plus"></i>Sign up
+             <% end %>
+           </li>
+           <li class="nav-item">
+            <%= link_to new_user_session_path, class: 'nav-link text-white' do %>
+             <i class="fas fa-sign-in-alt"></i>Log in
+             <% end %>
+           </li>
+          <% end %>
+    </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
     <%= yield %>
+    </main>
+    <footer class="p-3">
+      <div class="container">
+          <p class="text-center">
+            [フッター]地球はまるい（たぶん）[フッター]
+          </p>
+      </div>
+    </footer>
   </body>
 </html>
