--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="col-3">
+    <div class="row">
+    <h2>
+      User info
+    </h2>
+    <div class="row">
+      <%= image_tag @user.get_profile_image(200,200) %>
+    </div>
+  </div>
+
+  <table class="table">
+    <tbody>
+        <tr>
+        <td>name</td>
+        <td><%= @user.name %></td>
+        </tr>
+      <tr>
+        <td>introduction</td>
+        <td><%= @user.introduction %></td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
+  
+
+
+
+  </div>
+</div>
