--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,7 @@
         </div>
       </nav>
     </header>
+     <div class="text-success mx-auto "><%= flash[:notice] %></div>
     <main>
     <%= yield %>
     </main>
