--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container">
+
+  <%= render 'users/message',book: @book %>
+
+  <div class="row">
+    <%= render 'users/user_info', user: @user, book: @book %>
+
+
+  <div class="col-9">
+    <h1>Books</h1>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <td>image</td>
+          <td>Title</td>
+          <td>Body</td>
+        </tr>
+      </thead>
+     <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td><a href="<%= book_path(book.id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br>
+          <%= book.user.name %></a></td>
+          <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
+          <td><a href="<%= book_path(book.id) %>"><%= book.body %></a></td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
+  </div>
+  </div>
+
+</div>
