--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <%= render 'users/message', book: @user %>
+  <div class="col-5 mx-auto">
+    <h1>User Edit</h1>
+
+   <%= form_with model: @user do |f| %>
+
+  <div class="form-group">
+   <label for="user_name">Name</label><br>
+   <%= f.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+   <label for="user_profile_image">profile_image</label><br>
+   <%= f.file_field :profile_image, accept: "image/*" %>
+  </div>
+
+  <div class="form-group">
+   <label for="user_introduction">Introduction</label><br>
+   <%= f.text_area :introduction, class: "form-control" %>
+  </div>
+
+   <button type="submit" class="btn btn-success">Update Book</button>
+
+<% end %>
+  </div>
+
+</div>
