--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,31 @@
 <div class="container">
-  <div class="col-3">
-    <div class="row">
-    <h2>
-      User info
-    </h2>
-    <div class="row">
-      <%= image_tag @user.get_profile_image(200,200) %>
-    </div>
-  </div>
+  <%= render 'users/message',book: @book %>
 
-  <table class="table">
-    <tbody>
+  <div class="row">
+    <%= render 'users/user_info', user: @user, book: @book %>
+
+
+  <div class="col-9">
+    <h1>Books</h1>
+    <table class="table table-hover">
+      <thead>
         <tr>
-        <td>name</td>
-        <td><%= @user.name %></td>
+          <td></td>
+          <td>Title</td>
+          <td>Body</td>
         </tr>
-      <tr>
-        <td>introduction</td>
-        <td><%= @user.introduction %></td>
-      </tr>
-    </tbody>
-  </table>
-  
-  
-  
-
-
-
+      </thead>
+     <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td><a href="<%= book_path(book.id) %>"><%= image_tag @user.get_profile_image(100,100) %></a></td>
+          <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
+          <td><%= book.body %></td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
   </div>
+  </div>
+
 </div>
