--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
    <%= f.text_area :introduction, class: "form-control" %>
   </div>
 
-   <button type="submit" class="btn btn-success">Update Book</button>
+   <button type="submit" class="btn btn-success">Update User</button>
 
 <% end %>
   </div>
