--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 <%= link_to "Show", book_path(@book.id) %>
 <span>|</span>
-<%= link_to "Back", user_path(@book.user_id) %>
+<%= link_to "Back", books_path %>
   </div>
 
 
