--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,12 +6,12 @@
     <%= render 'users/user_info', user: @user, book: @book %>
 
 
-  <div class="col-9">
+  <div class="col-md-8 offset-md-1">
     <h1>Books</h1>
     <table class="table table-hover">
       <thead>
         <tr>
-          <td>image</td>
+          <td></td>
           <td>Title</td>
           <td>Body</td>
         </tr>
@@ -19,10 +19,9 @@
      <tbody>
         <% @books.each do |book| %>
         <tr>
-          <td><a href="<%= book_path(book.id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br>
-          <%= book.user.name %></a></td>
+          <td><a href="<%= user_path(book.user_id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br></a></td>
           <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
-          <td><a href="<%= book_path(book.id) %>"><%= book.body %></a></td>
+          <td><%= book.body %></td>
         </tr>
         <% end %>
      </tbody>
