--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,16 +5,14 @@
     <%= render 'users/user_info', user: @user, book: @book %>
 
 
-  <div class="col-9">
+  <div class="col-md-8 offset-md-1">
     <h1>Book detail</h1>
     <table class="table table-hover">
       <thead>
         <tr>
-          <td>image</td>
+          <td></td>
           <td>Title</td>
           <td>Body</td>
-          <td></td>
-          <td></td>
         </tr>
       </thead>
      <tbody>
@@ -25,13 +23,13 @@
           <td><%= @books.body %></td>
 
           <td ><% if @user == current_user %><a class="btn btn-success" href="<%= edit_book_path(@books.id) %>" role="button">
-            編集
+            Edit
             </a><% end %></td>
 
           <td>
             <% if @user == current_user %>
               <%= link_to book_path(@books.id), method: :delete, class: "btn btn-danger", role: "button", data: { confirm: "本当に削除しますか？" } do %>
-              削除
+              Destroy
               <% end %>
             <% end %>
           </td>
