--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,3 @@
 <div class="container mx-auto col-4 ">
-  <h1 class="text-center">Welcome to <strong><i class="fas fa-book-open"></i> Bookers</strong></h1>
+  <h1 class="text-center">Welcome to <strong><i class="fas fa-book"></i> Bookers</strong></h1>
 </div>
