--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto col-4 ">
 
-<h1>Welcome to <strong><i class="fas fa-book-open"></i> Bookers!!!!</strong></h1>
+<h1>Welcome to <strong><i class="fas fa-book"></i></i> Bookers!!!!</strong></h1>
 
 <p>you can share and exchange your opinions , inpressions , and emotions</p>
 <p>about various books!</p>
