--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column vh-100">
+  <body>
     <header class="shadow-sm bg-success ">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
@@ -34,7 +34,7 @@
             </li>
             <li class="nav-item">
              <%= link_to "/books", class: 'nav-link text-white'  do %>
-              <i class="fas fa-book"></i>Books
+              <i class="fas fa-book-open"></i>Books
              <% end %>
             </li>
             <li class="nav-item">
@@ -49,8 +49,8 @@
              <% end %>
             </li>
             <li class="nav-item">
-             <%= link_to "/homes/about", class: 'nav-link text-white'  do %>
-              <i class="fas fa-wrench"></i>About
+             <%= link_to "/home/about", class: 'nav-link text-white'  do %>
+              <i class="fas fa-link"></i>About
              <% end %>
             </li>
             <li class="nav-item">
