--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
     <%= render 'users/user_info', user: @user, book: @book %>
 
 
-  <div class="col-9">
+  <div class="col-md-8 offset-md-1">
     <h1>Users</h1>
     <table class="table table-hover">
       <thead>
