--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <%= render 'users/user_info', user: @user, book: @book %>
 
 
-  <div class="col-9">
+  <div class="col-md-8 offset-md-1">
     <h1>Books</h1>
     <table class="table table-hover">
       <thead>
@@ -18,7 +18,7 @@
      <tbody>
         <% @books.each do |book| %>
         <tr>
-          <td><a href="<%= book_path(book.id) %>"><%= image_tag @user.get_profile_image(100,100) %></a></td>
+          <td><a href="<%= user_path(@user.id) %>"><%= image_tag @user.get_profile_image(100,100) %></a></td>
           <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
           <td><%= book.body %></td>
         </tr>
