--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,7 +38,51 @@
         </tr>
      </tbody>
     </table>
+
+  <dir>
+  <h1>Comments</h1>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <td></td>
+          <td>User Name</td>
+          <td>Comment</td>
+          <td></td>
+        </tr>
+      </thead>
+     <tbody>
+        <% @books.comments.each do |comment| %>
+        <tr>
+          <td><a href="<%= book_path(@books.id) %>"><%= image_tag comment.user.get_profile_image(50,50) %><br></a></td>
+          <td><%= comment.user.name %></td>
+          <td><%= comment.comment %></td>
+          <td>
+            <% if comment.user == current_user %>
+              <%= link_to book_comment_path(comment.book,comment), method: :delete, class: "btn btn-danger", role: "button", data: { confirm: "本当に削除しますか？" } do %>
+              Destroy
+              <% end %>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
+
+    <h2>New comment</h2>
+
+   <%= form_with model: [@books,@comment] do |f| %>
+
+  <div class="form-group">
+   <%= f.text_field :comment, class: "form-control" %>
+   <button type="submit" class="btn btn-success">送信</button>
+   <% end %>
   </div>
+
+  </dir>
+
+  </div>
+
+
   </div>
 
 </div>
