--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,6 +14,8 @@
           <td></td>
           <td>Title</td>
           <td>Body</td>
+          <td></td>
+          <td></td>
         </tr>
       </thead>
      <tbody>
@@ -22,6 +24,18 @@
           <td><a href="<%= user_path(book.user_id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br></a></td>
           <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
           <td><%= book.body %></td>
+          <td>
+            <% if book.favorited_by?(current_user) %>
+            　<%= link_to book_favorites_path(book), method: :delete do %>
+              ♥<%= book.favorites.count %>いいね
+              <% end %>
+            <% else %>
+              <%= link_to book_favorites_path(book), method: :post do %>
+              ♡<%= book.favorites.count %> いいね
+              <% end %>
+            <% end %>
+          </td>
+          <td><%= book.comments.count %>コメント</td>
         </tr>
         <% end %>
      </tbody>
