--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,17 +22,32 @@
           <td><a href="<%= book_path(@books.id) %>"><%= @books.title %></a></td>
           <td><%= @books.body %></td>
 
-          <td ><% if @user == current_user %><a class="btn btn-success" href="<%= edit_book_path(@books.id) %>" role="button">
-            Edit
-            </a><% end %></td>
 
           <td>
-            <% if @user == current_user %>
-              <%= link_to book_path(@books.id), method: :delete, class: "btn btn-danger", role: "button", data: { confirm: "本当に削除しますか？" } do %>
-              Destroy
+            <% if @books.favorited_by?(current_user) %>
+            　<%= link_to book_favorites_path(@books), method: :delete do %>
+              ♥<%= @books.favorites.count %>いいね
+              <% end %>
+            <% else %>
+              <%= link_to book_favorites_path(@books), method: :post do %>
+              ♡<%= @books.favorites.count %> いいね
               <% end %>
             <% end %>
           </td>
+
+          <% if @user == current_user %>
+          <td >
+            <a class="btn btn-success" href="<%= edit_book_path(@books.id) %>" role="button">
+            Edit
+            </a>
+          </td>
+
+          <td>
+            <%= link_to book_path(@books.id), method: :delete, class: "btn btn-danger", role: "button", data: { confirm: "本当に削除しますか？" } do %>
+              Destroy
+            <% end %>
+          </td>
+          <% end %>
 
 
         </tr>
