--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -18,6 +18,29 @@
         <td>introduction</td>
         <td><%= user.introduction %></td>
       </tr>
+      <tr>
+        <td>follows</td>
+        <td><%= @user.follows.count %></td>
+      </tr>
+      <tr>
+        <td>followers</td>
+        <td><%= @user.followers.count %></td>
+      </tr>
+      <% if @user != current_user %>
+      <tr>
+        <td>
+            <% if @user.followed_by?(current_user) %>
+            　<%= link_to user_relationship_path(@user), method: :delete do %>
+                <button type="button" class="btn btn-success">フォローを外す</button>
+              <% end %>
+            <% else %>
+              <%= link_to user_relationships_path(@user), method: :post do %>
+              　<button type="button" class="btn btn-success">フォローする</button>
+              <% end %>
+            <% end %>
+          </td>
+      </tr>
+      <% end %>
     </tbody>
   </table>
 
