--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,6 +21,23 @@
         <tr>
           <td><a href="<%= user_path(user.id) %>"><%= image_tag user.get_profile_image(100,100) %></a></td>
           <td><a href="<%= user_path(user.id) %>"><%= user.name %></a></td>
+
+
+           <td>
+             <% if user !=current_user %>
+            <% if user.followed_by?(current_user) %>
+            　<%= link_to user_relationship_path(user_id: user.id, id: current_user.id), method: :delete do %>
+                <button type="button" class="btn btn-success">フォローを外す</button>
+              <% end %>
+            <% else %>
+              <%= link_to user_relationships_path(user.id), method: :post do %>
+              　<button type="button" class="btn btn-success">フォローする</button>
+              <% end %>
+            <% end %>
+           <% end %>
+           </td>
+
+
           <td><a href="<%= user_path(user.id) %>">Show</a></td>
         </tr>
         <% end %>
