--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,2 +1,49 @@
-<h1>Relationships#follower</h1>
-<p>Find me in app/views/relationships/follower.html.erb</p>
+<div class="container">
+
+  <%= render 'users/message',book: @book %>
+
+  <div class="row">
+    <%= render 'users/user_info', user: @user, book: @book %>
+
+
+  <div class="col-md-8 offset-md-1">
+    <h1>Followers</h1>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <td>image</td>
+          <td>Name</td>
+          <td></td>
+        </tr>
+      </thead>
+     <tbody>
+        <% @users.each do |user| %>
+        <tr>
+          <td><a href="<%= user_path(user.id) %>"><%= image_tag user.get_profile_image(100,100) %></a></td>
+          <td><a href="<%= user_path(user.id) %>"><%= user.name %></a></td>
+
+
+           <td>
+             <% if user !=current_user %>
+            <% if user.followed_by?(current_user) %>
+            　<%= link_to user_relationship_path(user_id: user.id, id: current_user.id), method: :delete do %>
+                <button type="button" class="btn btn-success">フォローを外す</button>
+              <% end %>
+            <% else %>
+              <%= link_to user_relationships_path(user.id), method: :post do %>
+              　<button type="button" class="btn btn-success">フォローする</button>
+              <% end %>
+            <% end %>
+           <% end %>
+           </td>
+
+
+          <td><a href="<%= user_path(user.id) %>">Show</a></td>
+        </tr>
+        <% end %>
+     </tbody>
+    </table>
+  </div>
+  </div>
+
+</div>
