--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
           <%= f.text_field :werd %>
           <%= f.select :range, options_for_select([['User'],['Book']]) %>
           <%= f.select :search, options_for_select([["完全一致","perfect_match"],["前方一致","forward_match"],["後方一致","backward_match"],["部分一致","partial_match"]]) %>
-          <%= f.submit "検索", class: "btn btn-success py-0" %>
+          <%= f.submit "検索",:disable_with=>"送信中", class: "btn btn-success py-0" %>
         <% end %>
        </div>
      <% end %>
