--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -65,8 +65,7 @@
    <label for="book_body">Body</label><br>
    <%= f.text_area :body, class: "form-control" %>
   </div>
-
-   <button type="submit" class="btn btn-success">Create Book</button>
+   <%= f.submit "Create Book", class: "btn btn-success",data: { disable_with: '送信中' } %>
 
 <% end %>
   </div>
