--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,16 +23,8 @@
           <td><%= @books.body %></td>
 
 
-          <td>
-            <% if @books.favorited_by?(current_user) %>
-            　<%= link_to book_favorites_path(@books), method: :delete do %>
-              ♥<%= @books.favorites.count %>いいね
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(@books), method: :post do %>
-              ♡<%= @books.favorites.count %> いいね
-              <% end %>
-            <% end %>
+          <td id="favorite-btn-<%= @books.id %>">
+            <%= render 'favorites/favorite-btn', book: @books %>
           </td>
 
           <% if @user == current_user %>
@@ -54,45 +46,8 @@
      </tbody>
     </table>
 
-  <dir>
-  <h1>Comments</h1>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <td></td>
-          <td>User Name</td>
-          <td>Comment</td>
-          <td></td>
-        </tr>
-      </thead>
-     <tbody>
-        <% @books.comments.each do |comment| %>
-        <tr>
-          <td><a href="<%= book_path(@books.id) %>"><%= image_tag comment.user.get_profile_image(50,50) %><br></a></td>
-          <td><%= comment.user.name %></td>
-          <td><%= comment.comment %></td>
-          <td>
-            <% if comment.user == current_user %>
-              <%= link_to book_comment_path(comment.book,comment), method: :delete, class: "btn btn-danger", role: "button", data: { confirm: "本当に削除しますか？" } do %>
-              Destroy
-              <% end %>
-            <% end %>
-          </td>
-        </tr>
-        <% end %>
-     </tbody>
-    </table>
-
-    <h2>New comment</h2>
-
-   <%= form_with model: [@books,@comment] do |f| %>
-
-  <div class="form-group">
-   <%= f.text_field :comment, class: "form-control" %>
-   <%= f.submit "送信", class: "btn btn-success",data: { disable_with: '送信中' } %>
-   <% end %>
-  </div>
-
+  <dir id="comments-index">
+        <%= render"comments/comments-index", book: @books,comment: @comment %>
   </dir>
 
   </div>
