--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -43,12 +43,13 @@
       <% end %>
     </tbody>
   </table>
-
+<% if user.name != "guestuser" %>
   <div class="col">
     <a class="btn btn-outline-primary mx-auto col mb-2" href= "<%= edit_user_path(user.id) %>" role="button">
       <i class="fas fa-user-cog"></i>
     </a>
   </div>
+  <% end %>
 
 
   <div>
