--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,12 +22,30 @@
         <% @books.each do |book| %>
         <tr>
           <td><a href="<%= user_path(book.user_id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br></a></td>
-          <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
+          <td><a href="<%= book_path(book.id) %>" data-turbolinks="false"><%= book.title %></a></td>
           <td><%= book.body %></td>
           <td id="favorite-btn-<%= book.id %>">
             <%= render 'favorites/favorite-btn', book: book %>
           </td>
           <td><%= book.comments.count %>コメント</td>
+          <td>
+            <div id="book-star-<%= book.id %>"></div>
+            <script>
+              $(document).on("turbolinks:load", function() {
+                $('#book-star-<%= book.id %>').empty();
+                let elem = document.querySelector('#book-star-<%= book.id %>');
+                let opt = {
+                  size     : 40,
+                  starOff:  '<%= asset_path('star-off.png') %>',
+                  starOn : '<%= asset_path('star-on.png') %>',
+                  readOnly: true,
+                  score: '<%= book.star %>'
+                };
+                raty(elem,opt);
+              });
+            </script>
+          </td>
+
         </tr>
         <% end %>
      </tbody>
