--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -66,6 +66,24 @@
    <label for="book_body">Body</label><br>
    <%= f.text_area :body, class: "form-control" %>
   </div>
+
+  <p>評価</p>
+  <div id="book_star"></div>
+<script>
+$(document).on("turbolinks:load", function() {
+  $('#book_star').empty();
+  let elem = document.querySelector('#book_star');
+  let opt = {
+    size     : 40,
+    starOff:  '<%= asset_path('star-off.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+    scoreName: 'book[star]',
+   };
+  raty(elem,opt);
+});
+</script>
+
+
    <%= f.submit "Create Book", class: "btn btn-success",data: { disable_with: '送信中' } %>
 
 <% end %>
