--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,55 +6,13 @@
     <%= render 'users/user_info', user: @user, book: @book %>
 
 
-  <div class="col-md-8 offset-md-1">
-    <p>
-      <%= link_to '新しい順', books_path(latest: "true") %>
-      |<%= link_to '古い順', books_path(old: "true") %>
-      |<%= link_to '星が多い順', books_path(star_desc: "true") %>
-    </p>
-    <h1>Books</h1>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <td></td>
-          <td>Title</td>
-          <td>Body</td>
-          <td></td>
-          <td></td>
-        </tr>
-      </thead>
-     <tbody>
-        <% @books.each do |book| %>
-        <tr>
-          <td><a href="<%= user_path(book.user_id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br></a></td>
-          <td><a href="<%= book_path(book.id) %>" data-turbolinks="false"><%= book.title %></a></td>
-          <td><%= book.body %></td>
-          <td id="favorite-btn-<%= book.id %>">
-            <%= render 'favorites/favorite-btn', book: book %>
-          </td>
-          <td><%= book.comments.count %>コメント</td>
-          <td>
-            <div id="book-star-<%= book.id %>"></div>
-            <script>
-              $(document).on("turbolinks:load", function() {
-                $('#book-star-<%= book.id %>').empty();
-                let elem = document.querySelector('#book-star-<%= book.id %>');
-                let opt = {
-                  size     : 40,
-                  starOff:  '<%= asset_path('star-off.png') %>',
-                  starOn : '<%= asset_path('star-on.png') %>',
-                  readOnly: true,
-                  score: '<%= book.star %>'
-                };
-                raty(elem,opt);
-              });
-            </script>
-          </td>
-
-        </tr>
-        <% end %>
-     </tbody>
-    </table>
-  </div>
+    <div class="col-md-8 offset-md-1">
+      <p>
+       <%= link_to '新しい順', books_path(latest: "true") %>
+       |<%= link_to '古い順', books_path(old: "true") %>
+       |<%= link_to '星が多い順', books_path(star_desc: "true") %>
+      </p>
+      <%= render 'books_index', books: @books %>
+    </div>
   </div>
 </div>
