--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="col-md-8 offset-md-1">
-    <h1>Books</h1>
     <table class="table table-hover">
 
       <% if @range == "User" %>
+    <h1>Users</h1>
+       <% if @users.empty? %>
+        <h2>検索条件に一致する結果が見つかりませんでした。</h2>
+       <% else %>
       <thead>
         <tr>
           <td>image</td>
@@ -36,38 +39,15 @@
           <td><a href="<%= user_path(user.id) %>">Show</a></td>
         </tr>
         <% end %>
+        <% end %>
      </tbody>
       <% else %>
-      <thead>
-        <tr>
-          <td></td>
-          <td>Title</td>
-          <td>Body</td>
-          <td></td>
-          <td></td>
-        </tr>
-      </thead>
-        <tbody>
-        <% @books.each do |book| %>
-        <tr>
-          <td><a href="<%= user_path(book.user_id) %>"><%= image_tag book.user.get_profile_image(100,100) %><br></a></td>
-          <td><a href="<%= book_path(book.id) %>"><%= book.title %></a></td>
-          <td><%= book.body %></td>
-          <td>
-            <% if book.favorited_by?(current_user) %>
-            　<%= link_to book_favorites_path(book), method: :delete do %>
-              ♥<%= book.favorites.count %>いいね
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(book), method: :post do %>
-              ♡<%= book.favorites.count %> いいね
-              <% end %>
-            <% end %>
-          </td>
-          <td><%= book.comments.count %>コメント</td>
-        </tr>
-        <% end %>
-        </tbody>
+      <% if @books.empty? %>
+      <h1>Books</h1>
+      <h2>検索条件に一致する結果が見つかりませんでした。</h2>
+      <% else %>
+       <%= render 'books/books_index', books: @books %>
+      <% end %>
       <% end %>
     </table>
   </div>
