--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -66,6 +66,11 @@
    <label for="book_body">Body</label><br>
    <%= f.text_area :body, class: "form-control" %>
   </div>
+  
+  <div class="form-group">
+   <label for="book_body">Tag</label><br>
+   <%= f.text_area :tag, class: "form-control" %>
+  </div>
 
   <p>評価</p>
   <div id="book_star"></div>
